static/styles/style.css
/* ... */
.layout__boxHeader {
    display: flex;
    padding: 1.5rem;
    background-color: var(--color-dark-light);
}

.layout__boxTitle {
    display: flex;
    gap: 1.5rem;
    align-items: center;
}

.layout__boxTitle h3 {
    text-transform: uppercase;
    font-weight: 500;
    color: var(--color-light);
}

.layout__boxTitle svg {
    width: 1.6rem;
    height: 1.6rem;
    fill: var(--color-light);
}

.layout__body {
    margin: 3rem;
}

@media screen and (max-width: 900px) {
    .activities,
    .topics {
        display: none;
    }

    .layout--3 > .container > div:nth-child(2) {
        flex-basis: 100%;
    }
}

/*==============================
=>  Topics
================================*/

.form__group {
    margin-bottom: 2rem;
    width: 100%;
}

.form__split {
    display: flex;
    gap: 1.5rem;
}

.form__group label {
    display: block;
    font-size: 1.5rem;
    margin-bottom: 1rem;
}

.form__group input,
.form__group textarea,
.form__group select {
    background: transparent;
    border: 1px solid var(--color-dark-light);
    padding: 1rem;
    border-radius: 3px;
    width: 100%;
    color: var(--color-light);
    font-weight: 500;
    outline: none;
}

.form__group input:focus,
.form__group textarea:focus {
    border-color: var(--color-main);
}

.form__group textarea {
    background: transparent;
    height: 10rem;
    resize: none;
}

.form__group select {
    color: var(--color-gray);
    font-weight: 400;
}

.form__group select option {
    background-color: var(--color-dark-light);
    color: var(--color-light);
    padding: 0 10rem;
}

.form__action {
    display: flex;
    justify-content: flex-end;
    gap: 3rem;
}

.form__hide {
    position: absolute;
    left: -9999px;
}

.form__avatar label {
    text-align: center;
    font-size: 1.8rem;
    font-weight: 500;
    color: var(--color-main);
    cursor: pointer;
}

.form__avatar label:hover {
    text-decoration: none;
}

/*==============================
=>  Topics
================================*/

.topics__header {
    margin-bottom: 2rem;
}

.topics__header h2 {
    text-transform: uppercase;
    font-weight: 500;
    color: var(--color-dark-light);
}

.topics__list {
    list-style: none;
}

.topics__list li a {
    display: flex;
    justify-content: space-between;
    margin-bottom: 3rem;
    font-weight: 500;
    color: var(--color-light-gray);
    transition: all 0.3s ease-in-out;
}

.topics__list li a.active,
.topics__list li a:hover {
    color: var(--color-main);
}

.topics__list li a span {
    padding: 0.5rem 1rem;
    background-color: var(--color-dark);
    border-radius: 3px;
    font-size: 1.3rem;
    font-weight: 700;
    letter-spacing: 1px;
}

.topics-page a:hover {
    text-decoration: none;
}

.topics-page .topics__list li:not(:last-child) a {
    margin: 2rem 0;
    padding-bottom: 1rem;
    text-decoration: none;
    border-bottom: 1px solid var(--color-dark-medium);
}

.topics-page .header__search {
    display: block;
}

@media screen and (max-width: 500px) {
    .mobile-menu .header__search {
        display: block;
        margin-bottom: 2.4rem;
    }
}

/*==============================
=>  Room List
================================*/

.roomList__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 2.4rem;
}

.roomList__header h2 {
    text-transform: uppercase;
    font-weight: 500;
    color: var(--color-light);
    letter-spacing: 1px;
}

.roomList__header p {
    font-weight: 500;
    color: var(--color-dark-light);
}

/*========== Room List Room ==========*/

.roomListRoom {
    margin-bottom: 2.4rem;
    background-color: var(--color-dark);
    border-radius: 1rem;
    padding: 2rem;
}

/* .roomListRoom div:hover {
    cursor: pointer;
} */

.roomListRoom__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.roomListRoom__author {
    font-weight: 500;
    display: flex;
    align-items: center;
    gap: 1rem;
}

.roomListRoom__actions {
    display: flex;
    align-items: flex-start;
    gap: 1rem;
    position: relative;
}

.roomListRoom__actions span {
    font-size: 1.4rem;
    font-weight: 500;
}

.roomListRoom__actions svg {
    fill: var(--color-main);

    width: 1.6rem;
    height: 1.6rem;
}

.roomListRoom__content {
    margin: 1rem 0;
}

.roomListRoom__content a {
    font-size: 2rem;
    font-weight: 500;
    margin-bottom: 1.5rem;
    color: var(--color-light);
    transition: all 0.3s ease-in-out;
}

.roomListRoom__content a:hover {
    color: var(--color-main);
}

.roomListRoom__meta {
    border-top: 1px solid var(--color-dark-medium);
    padding-top: 1rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.roomListRoom__joined {
    color: var(--color-light-gray);
    display: flex;
    align-items: center;
    gap: 1rem;
    font-size: 1.4rem;
    font-weight: 500;
}

.roomListRoom__joined svg {
    fill: var(--color-main);
    width: 1.6rem;
    height: 1.6rem;
}

.roomListRoom__topic {
    padding: 5px 1.5rem;
    background-color: var(--color-dark-medium);
    border-radius: 5rem;
    font-weight: 500;
    font-size: 1.3rem;
}

/*==============================
=>  Activities
================================*/

.activities {
    background: var(--color-dark);
    border-radius: 5px;
    overflow: hidden;
}

.activities__header h2 {
    background-color: var(--color-dark-light);
    text-transform: uppercase;
    font-weight: 500;
    padding: 1rem 1.5rem;
    color: var(--color-dark);
    letter-spacing: 1px;
    font-size: 1.4rem;
}

.activities__box {
    margin: 1.5rem;
    padding: 1.5rem;
    border: 2px solid var(--color-dark-medium);
    border-radius: 5px;
}

.activities__boxHeader p {
    font-size: 1.4rem;
    line-height: 1.3;
}

.activities__boxHeader p span {
    color: var(--color-gray);
    font-size: 1.2rem;
    display: block;
}

.activities__boxContent {
    margin-left: 4.2rem;
}
/* ... */

